crates/tuna/tests/parser/fail/param-name-collision.som
"test:
fail-message:
  - contains: foo
  - contains: defined twice
"

ParamNameCollision = (
  bar: foo bar: spam bar: foo = (42)
)
